Add threshold alert for admin area
